Prevent text wrapping in certain table cells

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -205,6 +205,10 @@ more {
     font-weight: 300;
 }
 
+.no-wrap {
+    white-space: nowrap;
+}
+
 @media print, screen and (max-width: 960px) {
   div.wrapper {
     width:auto;
